# BCI_Wheelchair_CAIR

./: README.md  test
dmp_planner/: CMakeLists.txt  package.xml
dmp_planner/include/: dmp_planner.h
dmp_planner/src/: dmp_planner.cpp
rf2o_laser_odometry/launch/: rf2o_laser_odometry.launch
rplidar_ros/launch/: .rplidar.launch.swp  rplidar.launch
wc_navigation/: CMakeLists.txt  package.xml
wc_navigation/launch/: amcl.launch  move_base.launch  wc_navigation.launch  wheelchair.launch
wc_navigation/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
wc_navigation/rviz/: wc_navigation.rviz
wc_navigation/src/: socket_api.py
wc_navigation3D/: CMakeLists.txt  package.xml
wheelchair_description/: package.xml  package.xmlZone.Identifier
wheelchair_description/config/: display.rviz  joint_names_urdf.yaml  joint_names_wheelchair.yaml
wheelchair_description/launch/: display.launch  gazebo.launch
wheelchair_description/meshes/: base_link.STL  depth_camera.STL  front_left_wheel.STL  front_left_wheel_hub.STL  front_right_wheel.STL  front_right_wheel_hub.STL  laser.STL  left_wheel.STL  right_wheel.STL
wheelchair_description/rviz/: config.rviz
wheelchair_description/urdf/: test.urdf  urdf.csv  urdf.urdf  wheelchair.csv  wheelchair.urdf
