<?xml version="1.0"?>
<package format="2">
  <name>wc_navigation</name>
  <version>1.2.4</version>
  <description>
    This package provides roslaunch scripts for navigating the robot.
  </description>
  <license>Apache 2.0</license>
  <author email="akmaurya7379@gmail.com">Anurag Maurya</author>
  <author email="gupta.ayush2587@gmail.com">Ayush Gupta</author>
  <maintainer email="akmaurya7379@gmail.com">Anurag Maurya</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>spatio_temporal_voxel_layer</exec_depend>
</package>
